2009-02-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Don't use
	  the TextEditor from a non-gui thread since this property
	  needs to query some gtk# properties.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: Set a minimum
	  icon height and width on the drop down boxes. Fixes size
	  jumping with small UI font (there'll still be an issue with
	  large fonts).

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: Language
	  tooltips now shrink namespaces when control is pressed.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/DebugValueTooltipProvider.cs:
	* MonoDevelop.SourceEditor/LanguageItemTooltipProvider.cs:
	* MonoDevelop.SourceEditor/CompileErrorTooltipProvider.cs:
	  Track api changes.

2009-02-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/LanguageItemWindow.cs: fixed "Bug
	  477513 - Tooltips should show full namespace when names
	  clash".

2009-02-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Changed
	  message.

2009-02-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: fixed "Bug
	  475990 - Code navigation not working in a ctor call inside a
	  property".

2009-02-17  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Handle
	  UTF32 code points from IMContext. Don't pass most recent
	  keypress through with IMContext multi-press commits, so that
	  it doesn't append the space/enter that was used to terminate
	  the multi-press input.

2009-02-17  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: